@@ -33,6 +33,7 @@ ctags-NEXT (Mon June 6 2007)
 * Fixed parsing of destructors with whitespace after the '~' [C++, Bug #1585745].
 * Fixed default access of unions to be public [C++, Bug #1548443].
 * Fixed various memory leaks, mostly contributed by Dmitry Antipov.
+* Fixed parsing of `define [Verilog, Bug #961001].
 
 ctags-5.6 (Mon May 29 2006)
 * Reformatted code for independence of tab stop setting.
